fix: clouds agora tem z-index: -1

--- a/src/components/Clouds/style.css
+++ b/src/components/Clouds/style.css
@@ -1,4 +1,5 @@
 .cloud {
+  z-index: -1;
   position: fixed;
   width: 200px;
   height: 120px;
